<resources>

    <string name="app_name">waydo</string>


    <string name="user">Alejandro</string>


    <string name="menu_home">Home</string>
    <string name="menu_login">Iniciar sesión</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_actividades">Ver actividades</string>
    <string name="menu_actividades_add">Añadir actividad</string>
    <string name="menu_usuario">@string/user</string>
    <string name="menu_salir">Salir</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- arrays para los spinners -->
    <string-array name="evento_tipo">
        <item></item>
        <item>Tareas</item>
        <item>Exámenes</item>
        <item>Proyectos</item>
        <item>Apoyo</item>
        <item>Otros</item>
    </string-array>


    <string-array name="modulo_nombre">
        <item></item>
        <item>Programación de Servicios y Procesos</item>
        <item>Móviles</item>
        <item>Desarrollo de Interfaces</item>
        <item>Diseño de Interfaces</item>
        <item>Genérico</item>
    </string-array>


    <string-array name="vigencia">
        <item></item>
        <item>Vigente</item>
        <item>Finalizado</item>
    </string-array>

</resources>