<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navegacion_view">

    <group android:checkableBehavior="single">

        <!--
        Item home a implementar en el futuro
        <item
            android:id="@+id/id_home"
            android:icon="@drawable/icon_home_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_home" />
        -->
        <item
            android:id="@+id/id_login"
            android:icon="@drawable/icon_login_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/id_registro"
            android:icon="@drawable/icon_register_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_registro" />
        <item
            android:id="@+id/id_actividades"
            android:icon="@drawable/icon_activities_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_actividades" />
        <item
            android:id="@+id/id_actividades_add"
            android:icon="@drawable/icon_add_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_actividades_add" />
        <item
            android:id="@+id/id_usuario"
            android:icon="@drawable/icon_user_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_usuario" />
        <item
            android:id="@+id/id_salir"
            android:icon="@drawable/icon_exit_32px"
            android:iconTint="@color/black"
            android:title="@string/menu_salir" />

    </group>


</menu>